# ext-elasticsearch-operator

./: Cargo.toml  Dockerfile  README.md  helm_package.sh  push_to_registry.sh  stresstest.sh
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml
helm-repo/: ext-elasticsearch-operator-0.1.0.tgz  ext-elasticsearch-operator-0.1.1.tgz  ext-elasticsearch-operator-0.1.2.tgz  ext-elasticsearch-operator-0.1.3.tgz  ext-elasticsearch-operator-1.0.0.tgz  ext-elasticsearch-operator-1.0.1.tgz  ext-elasticsearch-operator-1.0.2.tgz  ext-elasticsearch-operator-1.0.3.tgz  ext-elasticsearch-operator-1.0.4.tgz  ext-elasticsearch-operator-1.0.5.tgz  index.yaml
src/: elasticsearch.rs  env.rs  error.rs  main.rs  reconciliation.rs
src/elasticsearch/: error.rs  role.rs  user.rs
