[package]
name = "ext-elasticsearch-operator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
serde = { version = "1.0.196", features = ["derive"] }
schemars = "0.8.16"
serde_json = "1.0.113"
kube-derive = "0.88.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
base64 = "0.21.7"
thiserror = "1.0.57"
log = "0.4.20"
fern = "0.6.2"
humantime = "2.1.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.30"
futures = "0.3.30"
passwords = "3.1.16"
